--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="container">  
+  <nav>
+    <%= link_to "Sign Up", new_user_registration_path %>
+    <%= link_to "Sign In", new_user_session_path %>
+    <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+  </nav>
+
+  <div class="container">
     <%= flash[:alert] %>
     <%= flash[:notice] %>
     <%= yield %>
