--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,9 +1,3 @@
-<%= form_for [@user, @contact] do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-  <%= f.label :phone %>
-  <%= f.text_field :phone %>
-  <%= f.submit "Add Contact" %>
-<% end %>
+<h3>Add New Contact</h3>
+
+<%= render 'form' %>
